discussion/kv_engine/170695/170695_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49489: Add magma_mem_quota_low_watermark_ratio to config.json

Until recently Magma's memory quota was only used to size the
write and block cache. Bloom filters were accounted for
in the computation but could not be evicted. We recently added
permanent eviction for bloom filters if they exceed the quota.

This requires magma's memory quota to be raised cos of which
magma_mem_quota_ratio has been increased to 0.5 ie. magma will
begin evicting bloom filters once we hit that limit.

We are also adding magma_mem_quota_low_watermark_ratio, this
will allow Magma to size it's write and block caches. The default
value of this config is 0.2. The memory quota for block and write
cache remains the same since the default
magma_mem_quota_low_watermark_ratio(0.2) * magma_mem_quota_ratio(0.5)
is 0.1 which was the old magma_mem_quota_ratio.

Change-Id: I148a79f9601c73ca2110ca75f80c498cf7d44cc1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2022-02-14 18:00:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-14 18:09:16.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15611/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13: error: use of undeclared identifier "getMagmaMemoryQuotaLowWaterMarkRatio" [clang-diagnostic-error]
            getMagmaMemoryQuotaLowWaterMarkRatio();
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15611/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13:
error: use of undeclared identifier "getMagmaMemoryQuotaLowWaterMarkRatio" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15611/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43924/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(582): error C3861: "getMagmaMemoryQuotaLowWaterMarkRatio": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43924/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37038/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13:
error: use of undeclared identifier "getMagmaMemoryQuotaLowWaterMarkRatio"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37038/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5259/ : FAILURE

Compile error at [2022-02-14T18:03:22.417Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13:
error: use of undeclared identifier "getMagmaMemoryQuotaLowWaterMarkRatio"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5259/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16428/ : FAILURE

Compile error at [2022-02-14T18:05:58.897Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13:
error: use of undeclared identifier "getMagmaMemoryQuotaLowWaterMarkRatio"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16428/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17661/ : FAILURE

Compile error at [2022-02-14T18:03:51.685Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13:
error: ?getMagmaMemoryQuotaLowWaterMarkRatio? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17661/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18391/ : FAILURE

Compile error at [2022-02-14T18:03:40.702Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13:
error: use of undeclared identifier "getMagmaMemoryQuotaLowWaterMarkRatio"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18391/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17356/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0145/0159]: test_MB-19687_fixed...Unexpected stat: ep_magma_mem_quota_low_watermark_ratio from stat group 
[2022-02-14T18:07:17.438Z] Unexpected stat: ep_magma_mem_quota_low_watermark_ratio from stat group config
[2022-02-14T18:07:17.438Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7845 Test failed: `stats error" (missing stats)
[2022-02-14T18:07:17.438Z] (47 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17356/ )

Failure of GoogleTest "EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_couchstore":

<pre>
[ RUN      ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_couchstore
[2022-02-14T18:08:39.890Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:310: Failure
[2022-02-14T18:08:39.890Z] Failed
[2022-02-14T18:08:39.890Z] Dynamic config key "magma_mem_quota_low_watermark_ratio" cannot be set via any of the set...Param methods.
[2022-02-14T18:08:39.890Z] [  FAILED  ] EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_couchstore, where GetParam() = "persistent_couchstore" (37 ms)
EphemeralOrPersistent/EPEngineParamTest.DynamicConfigValuesModifiable/persistent_couchstore
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17356/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5320/ : FAILURE

Compile error at [2022-02-14T18:08:53.189Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13:
error: ?getMagmaMemoryQuotaLowWaterMarkRatio? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5320/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25758/ : FAILURE

Compile error at [2022-02-14T18:07:05.300Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:582:13:
error: use of undeclared identifier "getMagmaMemoryQuotaLowWaterMarkRatio"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25758/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14453/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
